--- a/learn_qml/QmlCppIntegration/Take1/readme
+++ b/learn_qml/QmlCppIntegration/Take1/readme
@@ -5,3 +5,6 @@ About this project
 - Message class exposes some of its members as PROPERTY so that it can be invoked from QML document
 - Message class also holds MessageBody and exposes it as PROPERTY
 - Before these classes can be used in QML, it must be properly set as context property which is done in main.cpp
+
+References:
+http://doc.qt.io/qt-5/qtqml-cppintegration-contextproperties.html
